<resources>
    <string name="app_name">جديد الخلفيات الإسلامية</string>
    <string name="author">xxx</string>
    <string name="description">جديد الخلفيات الإسلامية</string>
    <string name="txt1"> كيفية التطبيق يدويا ؟ </string>
    <string name="txt2">تطبيق الخلفية المتحرك</string>
    <string name="txt3">كيفية تطبيق الخلفية المتحرك ؟</string>  
    <string name="txt4"> الإعدادات -> الشاشة  -> لخلفية -> خلفيات متحرك ->خلفيات </string>
    <string name="pref_sync_frequency">إختيارالسرعة</string>
    <string name="pref_sync_frequency_summary"> الرجاء إختيارالسرعة </string>
    <string name="pref_update_setting">تعديلاة السرعة</string> 
   <string name="txt5">
يجد البعض من الإشهار فى التطبقات , الإشهارات نساهم في صنع العديد من التطبقات </string>
   <string name="txt6">  كيفية تبديل سرعة تخير الصور؟ </string>
    <string name="txt7">   يجب الدخول إلى التعديل و تخير السرعة , السرعة السريعة تستهلك الذاكرت </string>
    <string name="txt8"> حول الإشهار في البرنامج  </string>
    <string name="txt9">هذه الصور اللتي توجد في الخلفية</string>
    <string name="pref_sync_frequency2">مجموعة الصور</string>
    <string name="pref_sync_frequency_summary2">الرجاء إختيارمجموعة الصور</string>
    <string name="pref_update_setting2">مجموعة الصور</string>

     <string name="txt10">الذهاب إلى مجموعة الصور مع التكبير</string>
     <string name="txt12">تقييم البرنامج جزاك الله خيراً</string>
  <string name="txt11">succes to set wallpaper</string>
   
   <string name="kadir">وهو على كل شيء قدير</string>
   <string name="SobhhanRabi">سبحان ربي العظيم</string>
   <string name="SobhanaAllah">سبحان الله</string>
   <string name="Tawakkal">توكلت على الله</string>
   <string name="SobhhanRabi2">سبحان ربي العظيم ٢</string>
   <string name="Besmelleh">بسم الله الرحمن الرحيم</string>
   
   
</resources>

