<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#7f8c8d" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#7f8c8d"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="جديد الخلفيات الإسلامية"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textViewxxx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="أكبر مكتبة للخلفيات"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/txt2"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/Buttonrate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            android:text="@string/txt12"
            android:textColor="@android:color/white" />
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="مجموعة الخلفيات بإستعمال الإنترنات للتحميل من المتجر"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <ImageView
            android:layout_margin="10dp"
          android:id="@+id/imageViewPub"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_above="@+id/layoutbutton"
          android:layout_centerHorizontal="true"
          android:src="@drawable/ic_pub" />
        
        <TextView
            android:id="@+id/textView1xxx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="مجموعة الخلفيات"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
            android:id="@+id/textView1xx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="بدون إنترنات"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
                        android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="في هذه المجموعة يمكنك تطبيق الخلفيات الغير المتحركة"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/ButtonKadir"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/kadir"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/ButtonSobhhanRabi"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/SobhhanRabi"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/ButtonSobhanaAllah"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/SobhanaAllah"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/ButtonTawakkal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/Tawakkal"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/ButtonSobhanrabialaadim"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/SobhhanRabi2"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/ButtonBesmelleh"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/Besmelleh"
            android:textColor="@android:color/white" />
        
      
          
    </LinearLayout>

</ScrollView>